Fri Mar  6 12:01:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/TargetManager/DomainDataManager.cpp
        * DAnCE/TargetManager/ResourceCommitmentManager.cpp
          layout changes

        * examples/Display/NavDisplayGUI_exec/NavDisplayGUI.mpc
          Moved moc files to their own project to resolve build problems
          build incredibuild

Fri Mar  6 08:27:15 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * docs/tutorials/Quoter/Simple/01.html:
        * docs/tutorials/Quoter/Simple/02.html:
        * docs/tutorials/Quoter/Simple/03.html:
        * docs/tutorials/Quoter/Simple/04.html:
        * examples/Display/README.html:
          Addapted to the new naming convention of
          the dance executables.

Thu Mar  5 18:22:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Deployment/DAnCE_Core.mpc:
          Removed commented out line

        * DAnCE/TargetManager/CmpClient.cpp:
          Datatype fix

        * DAnCE/TargetManager/TargetManager.mpc:
        * DAnCE/TargetManager/TM_Client.mpc:
          Updated to new CIAO

        * DAnCE/TargetManager/TargetManager_exec.cpp:
        * DAnCE/TargetManager/TargetManager_exec.h:
          Made compiling again, no testing has been done yet

        * DAnCE/TargetManager/TargetManagerExt.idl:
          Doxygen change

        * tools/Config_Handlers/Config_Handlers.mpc:
          No need to set dynamic flags

Tue Mar  3 07:56:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/DevGuideExamples/Messenger/History_exec_i.cpp
        * examples/DevGuideExamples/Messenger/History_exec_i.h
        * examples/DevGuideExamples/Messenger/Messenger_exec_i.cpp
        * examples/DevGuideExamples/Messenger/Publication_exec_i.cpp
        * examples/DevGuideExamples/Messenger/Publication_exec_i.h
        * examples/DevGuideExamples/Messenger/Runnable_exec_i.cpp
        * examples/DevGuideExamples/Messenger/Runnable_exec_i.h