@@ -1,9 +1,7 @@
 // -*- MPC -*-
 // $Id$
 
-project : dance_deployment_stub {
+project : dance_deployment_stub, dance_nodemanager_stub {
   includes += $(CIAO_ROOT)/DAnCE/Interfaces
   includes += $(CIAO_ROOT)/DAnCE/NodeManager
-  libs     += DAnCE_NodeManager_Stub
-  after    += DAnCE_NodeManager_stub
 }
