@@ -1,3 +1,11 @@
+Fri Mar  6 14:26:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/TargetManager/DomainDataManager.cpp:
+          Resolve compile warnings
+
+        * MPC/config/ciao_nodemanager_stub.mpb:
+          Use base project
+
 Fri Mar  6 12:01:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/TargetManager/DomainDataManager.cpp
